@@ -209,6 +209,7 @@ typedef struct
   bool bUseIdeSlaveHardDiskImage;
   WRITEPROTECTION nWriteProtection;
   GEMDOS_CHR_CONV nGemdosCase;
+  bool bFilenameConversion;
   bool bBootFromHardDisk;
   char szHardDiskDirectories[MAX_HARDDRIVES][FILENAME_MAX];
   char szIdeMasterHardDiskImage[FILENAME_MAX];
